@@ -1,0 +1,7 @@
+#include "arg.ih"
+
+char const **Arg::argPointers()
+{
+    return d_ptr->argPointers();
+}
+
