@@ -3,16 +3,9 @@
 
 void CSVTable::stream(std::ostream &out)
 {
-    if (d_idx != 0)                 // not at the beginning of a row
-        row();                      // then end the current row
-
-    char fillChar = d_out->fill();          // keep the current fillChar
-
-    streamReset();                          // reset *d_out to its original
-                                            // settings
+    int fillChar = preStreamSwitch();
 
     d_out = &out;                           // switch stream
-    streamFlags();
 
-    out.fill(fillChar);
+    postStreamSwitch(fillChar);
 }
